tests/error/type_match/base_case_void_array_slice.bz
// error: array element type cannot be 'void'
function test()
{
	let arr = [4: int32]();
	let _: [: void] = arr;
}
